--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cropper Easy</title>
 
-    <script src="./shear.js"></script>
-    <link rel="stylesheet" href="./shear.css">
+    <script src="./src/shear.js"></script>
+    <link rel="stylesheet" href="./src/shear.css">
 
 </head>
 <body>
